portefaix-policies-0.7.0/kyverno/M0003-metadata-portefaix-labels/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok
  labels:
    portefaix.xyz/version: v1.0.0
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko
spec:
  containers:
  - name: nginx
    image: nginx:1.12
