portefaix-policies-0.7.0/kyverno/M0003-metadata-portefaix-labels/policy-M0003.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-M0003
  annotations:
    policies.kyverno.io/title: Metadata should have portefaix.xyz labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Metadata
    policies.kyverno.io/description: >-
      Metadata should have Portefaix labels:
      Labels are:
        - portefaix.xyz/version
spec:
  validationFailureAction: audit
  rules:
  - name: check-for-portefaix.xyz-labels
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "portefaix.xyz labels is required."
      pattern:
        metadata:
          labels:
            portefaix.xyz/version: "?*"
